Add ESP8266 submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "KiCad/Libraries/kicad_microbit_connector"]
 	path = KiCad/Libraries/kicad_microbit_connector
 	url = git@github.com:anthonykirby/kicad_microbit_connector.git
+[submodule "KiCad/Libraries/kicad_esp8266_modules"]
+	path = KiCad/Libraries/kicad_esp8266_modules
+	url = git@github.com:byran/kicad_esp8266_modules.git
